--- a/preseed.cfg
+++ b/preseed.cfg
@@ -81,5 +81,5 @@ d-i grub-installer/only_debian boolean true
 
 d-i finish-install/reboot_in_progress note
 d-i preseed/late_command string \
-echo "vagrant ALL=(ALL) ALL">>/target/etc/sudoers; \
+echo "vagrant ALL=NOPASSWD: ALL">>/target/etc/sudoers; \
 sync
